playwright-wrapper/_backup_fix_orphan_except_v2_20260217-205909/py_compile_after_restore.err
  File "app/main.py", line 399
    except Exception:
    ^^^^^^
SyntaxError: invalid syntax
